# course_work

./: pyproject.toml
main/: funcs.py  get_by_date.py  main.py
scripts/: banch.py  sorted.py
